--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "deploy": "npm run build&&gh-pages -d  build",
+
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d  build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
